# hyprland-vdm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hyprland.toml
.github/: copilot-instructions.md
dbg/: hyprland_test.conf  run_nested.sh
include/: Layout.hpp  LoggerFacade.hpp  VirtualDesktop.hpp  VirtualDesktopManager.hpp  commands.hpp  globals.hpp  workspace_manager.hpp
src/: Layout.cpp  LoggerFacade.cpp  VirtualDesktop.cpp  VirtualDesktopManager.cpp  commands.cpp  main.cpp  workspace_manager.cpp
